                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 4.2.2

  *) [TS-2859] Remove DBG macros to not generate warnings from GCC 4.9.

  *) [TS-2560] regex_remap lowercase substitutions is not being initialized in
   the construtor

  *) [TS-2867] Remove clock functionality from traffic_shell to address temporary file
   handling issues.

  *) [TS-2822] Crash in LogBufferIterator::next

  *) [TS-2778] Websockets remap doesn't properly handle the implicit port for wss.

Changes with Apache Traffic Server 4.2.1

  *) [TS-2624] Force CPU affinity to 0 to mimic previous behavior in 4.x branch
   and avoid regression.

  *) [TS-2564] Fixup MIME presence bits and slot accelerators to recover from
   WKS_IDX changes, plus config to turn it off manually.

  *) [TS-2654] Crash in Range requests with read-while-writer.

  *) [TS-2674] Remove debug printf() from traffic_top.

  *) [TS-2671] Restore missing .useflt remap directive.

  *) [TS-2564] Revert field token ordering.

Changes with Apache Traffic Server 4.2.0

  *) [TS-2569] Set the default SSL options correctly.
   Author: Ron Barber <rbarber@yahoo-inc.com>

  *) [TS-2620] Make the stats_over_http plugin publish node and plugin stats.

  *) [TS-2607] Fix TS_USE_HWLOC #define in build process

  *) [TS-2019] Fix the "vector inconsistency" errors.

  *) [TS-2593] HTTPS to origin fails on CentOS6.x. This is a regression of
   sort from TS-2355.

  *) [TS-2590] Translate documentation into Japanese.
   Authors: Masaori Koshiba <masaori335@gmail.com>
            Masakazu Kitajo <m4sk17@gmail.com>
            syucream <syucream1031@gmail.com>

  *) [TS-2568] Better template messages.

  *) [TS-2552] configure fails to detect missing the #define for
   SSL_CTX_set_tlsext_ticket_key_cb().

  *) [TS-2549] printf() compiler warnings  on OSX (clang) with the CPP APIs.

  *) [TS-2532] Fix make distclean for C++ API examples.
